--- a/about.qmd
+++ b/about.qmd
@@ -17,7 +17,7 @@ about:
 
 :::{#hero-heading}
 
-Hi! I'm Rebecca — a mom of two, Environmental Studies major at the University of California, Santa Barbara (UCSB), and Marine Corps veteran. I’ve taken an unconventional path to college, but I’ve made every step count. I’m drawn to work that’s hands-on, community-centered, and rooted in care — whether that’s in the field, the classroom, or beyond.
+Hi! I'm Rebecca — a student researcher, Environmental Studies major at the University of California, Santa Barbara (UCSB), mom of two, and Marine Corps veteran. I’ve taken an unconventional path to college, but I’ve made every step count. I’m drawn to work that’s hands-on, community-centered, and rooted in care — whether that’s in the field, the classroom, or beyond.
 
 Right now, I’m focused on environmental research, mentorship, and exploring how undergraduate education can connect science, service, and real-world impact.
 
