renamed resume.qmd -> experience.qmd
added comments to quiz.html for reproducibility

--- a/cats.qmd
+++ b/cats.qmd
@@ -25,5 +25,6 @@ Check back soon for more feline mischief, fluff, and fun!
 
 
 
+# Fluff
 <iframe src="quiz.html" width="100%" height="600" style="border: none;"></iframe>
 
