--- a/cats.qmd
+++ b/cats.qmd
@@ -2,10 +2,11 @@
 title: "Meet Chester and Leo"
 format:
   html:
-    theme: darkly
-    css: styles.css
+    theme: darkly   <!-- Using a dark theme for the HTML output -->
+    css: styles.css <!-- Custom CSS file to style the page -->
 ---
 
+<!-- Video wrapper container with a circle-shaped video using CSS -->
 <div class="video-wrapper">
   <video autoplay loop muted playsinline class="circle-video">
     <source src="/media/crazycat.mp4" type="video/mp4">
@@ -14,42 +15,40 @@ format:
 </div>
 
 Welcome to the page of Chester and Leo.
-
 # Biographies
 
 <div class="cat-profiles">
 
-  <!-- Button for Chester's profile -->
-  <div class="cat-button" onclick="toggleContent('chester-profile', this)">
-    <img src="/media/chester.jpeg" alt="Chester Odin" class="cat-thumb">
-    <span>Chester Odin</span>
-  </div>
-  
-  <!-- Chester's detailed profile (initially hidden) -->
-  <div id="chester-profile" class="cat-details">
-    <strong>“Chester the Cheetah”</strong><br>
-    <em>More info coming soon</em>
-    <br><br>
-    <img src="/media/chester-fun.jpeg" alt="Chester playing" 
-         style="max-width: 300px; border-radius: 12px; border: 3px solid #ffc107;">
-  </div>
+<!-- Button for Chester's profile -->
+<div class="cat-button" onclick="toggleContent('chester-profile', this)">
+  ![Chester Odin](/media/chester.jpeg){.cat-thumb}
+  <span>Chester Odin</span>
+</div>
 
-  <!-- Button for Leo's profile -->
-  <div class="cat-button" onclick="toggleContent('leo-profile', this)">
-    <img src="/media/leo.jpeg" alt="Leonel Vili" class="cat-thumb">
-    <span>Leonel Vili</span>
-  </div>
-  
-  <!-- Leo's detailed profile (initially hidden) -->
-  <div id="leo-profile" class="cat-details">
-    <strong>“Leo the Lion”</strong><br>
-    Leo is a playful polydactyl whose two great loves are meowing and hunting hair-ties.
-    <br><br>
-    <img src="/media/leo-fun.jpeg" alt="Leo with hair-tie" 
-         style="max-width: 300px; border-radius: 12px; border: 3px solid #ffc107;">
-  </div>
+<!-- Chester's detailed profile (initially hidden) -->
+<div id="chester-profile" class="cat-details" style="display:none;">
+  <strong>“Chester the Cheetah”</strong><br>
+  <em>Though docile and timid, Chester’s gentle and sweet nature shines through to anyone who takes the time to get to know him.</em>
+  <br><br>
+  ![Chester playing](/media/chester.jpeg){style="max-width:300px; border-radius:12px; border:3px solid #4FA78D;"}
+</div>
+
+<!-- Button for Leo's profile -->
+<div class="cat-button" onclick="toggleContent('leo-profile', this)">
+  ![Leonel Vili](/media/leo.jpeg){.cat-thumb}
+  <span>Leonel Vili</span>
+</div>
+
+<!-- Leo's detailed profile (initially hidden) -->
+<div id="leo-profile" class="cat-details" style="display:none;">
+  <strong>“Leo the Lion”</strong><br>
+  Leo is a playful polydactyl whose two great loves are meowing and hunting hair-ties.
+  <br><br>
+  ![Leo with hair-tie](/media/leo.jpeg){style="max-width:300px; border-radius:12px; border:3px solid #4FA78D;"}
+</div>
 
 </div>
+
 
 # Photo Gallery
 
@@ -57,19 +56,21 @@ _Wondering where the photos are? Chester and Leo got into the code again._
 
 # More Fluff
 
+<!-- Embed an external quiz page using an iframe -->
 <iframe src="quiz.html" width="100%" height="700" style="border:none;"></iframe>
-
-Check back soon for more feline mischief, fluff, and fun!
+_Check back soon for more feline mischief, fluff, and fun!_
 
 <script>
   // JavaScript function to toggle visibility of profiles
+  // id: string - the ID of the profile to show/hide
+  // el: DOM element - the button element clicked
   function toggleContent(id, el) {
     const content = document.getElementById(id);
-    // Check if content is currently visible
+    // Check if the profile is currently visible
     const isOpen = content.style.display === "block";
-    // Toggle display property between 'block' and 'none'
+    // Toggle between visible ('block') and hidden ('none')
     content.style.display = isOpen ? "none" : "block";
-    // Toggle 'open' class on the clicked element for styling
+    // Toggle an 'open' CSS class on the button element for styling feedback
     el.classList.toggle("open", !isOpen);
   }
 </script>
